--- a/wercker.yml
+++ b/wercker.yml
@@ -4,9 +4,7 @@ build:
     - arjen/hugo-build:
         version: 0.12
 deploy:
-  steps:
-    - arjen/hugo-build:
-        version: 0.12
-    - leipert/git-push@0.5.6:
-        gh_token: $GIT_TOKEN
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        domain: kyleboyle.com
         basedir: public
