--- a/wercker.yml
+++ b/wercker.yml
@@ -4,6 +4,7 @@ build:
     - arjen/hugo-build:
         version: 0.12
 deploy:
+  steps:
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
         domain: kyleboyle.com
