--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseurl = "http://kyleboyle.com/"
 languageCode = "en-us"
 title = "Kyle Boyle"
+theme = "kb1"
 
 [params]
     # Used when a given page doesn't set its own.
@@ -10,7 +11,7 @@ title = "Kyle Boyle"
     # Changes sidebar background and link/accent colours.
     # See below for more colour options.
     # This also works: "theme-base-08 layout-reverse", or just "layout-reverse".
-    theme = "theme-base-08"
+    theme = "theme-base-01"
 
     # Select a syntax highight.
     # Check the static/css/highlight directory for options.
@@ -22,7 +23,7 @@ title = "Kyle Boyle"
     # Metadata used to drive integrations.
     googleAuthorship = "Your Google+ profile ID"
     googleAnalytics = "Your Google Analytics tracking code"
-    gravatarHash = "MD5 hash of your Gravatar email address"
+    #gravatarHash = "MD5 hash of your Gravatar email address"
 
     # Sidebar social links, avoid enabling too many of these if possible.
     # These should be full URLs.
