--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,10 @@
-box: wercker/ruby
+box: wercker/default
 build:
   steps:
     - arjen/hugo-build:
         version: 0.12
+   - kyleboyle/html-proofer-test:
+        basedir: public
 deploy:
   steps:
     - lukevivier/gh-pages@0.2.1:
