--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,7 @@
-box: wercker/default
+box: debian
 build:
   steps:
-    - arjen/hugo-build:
-        version: "HEAD"
+    - arjen/hugo-build@1.8.4
     - kyleboyle/html-proofer-test:
         basedir: public
 deploy:
