--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ deploy:
 #        repo: kyleboyle/kyleboyle.com
 #        domain: kyleboyle.com
 #        path: public
-    - burrbd/gh-pages@0.2.3
+    - burrbd/gh-pages@0.2.3:
         token: $GITHUB_TOKEN
         domain: kyleboyle.com
         basedir: public
