--- a/wercker.yml
+++ b/wercker.yml
@@ -1,22 +1,15 @@
 box: ruby
 build:
   steps:
-    - arjen/hugo-build@1.8.4
+    - arjen/hugo-build
     - kyleboyle/html-proofer-test:
         basedir: public
 deploy:
   steps:
-#    - lukevivier/gh-pages@0.2.1:
-#        token: $GITHUB_TOKEN
-#        domain: kyleboyle.com
-#        basedir: public
-#    - uetchy/gh-pages@0.3.1:
-#        token: $GITHUB_TOKEN
-#        repo: kyleboyle/kyleboyle.com
-#        domain: kyleboyle.com
-#        path: public
-    -  uetchy/gh-pages:
-        token: $GITHUB_TOKEN
-        repo: kyleboyle/kyleboyle.com
+steps:
+    - install-packages:
+        packages: git ssh-client
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
         domain: kyleboyle.com
         basedir: public
